2006-07-13  Bruno Haible  <bruno@clisp.org>

	* printf.c (libintl_printf): Define to __printf__ on NetBSD, Cygwin,
	mingw.
	Reported by haibin zhang <dragzhb@yahoo.com.cn>.

2006-06-22  Ulrich Drepper  <drepper@redhat.com>

	* dcigettext.c (DCIGETTEXT): If _nl_find_msg returns -1 don't look
	further, return original strings.
	(_nl_find_msg): Do not return found translation if the conversion
	failed.  Either signal the string is unusable or that something went
	wrong and the original should be used.

2006-06-23  Bruno Haible  <bruno@clisp.org>

	* l10nflist.c (__argz_count, __argz_stringify, __argz_next): Define
	using the non-underscored functions when available. Avoids warnings
	on Cygwin.
	Reported by Eric Blake.

2006-06-19  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (libintl_printf): Define to __printf__ on NetBSD,
	Cygwin, mingw.
	Reported by Henry Nelson <netb@yuba.ne.jp>.

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* bindtextdom.c (gl_rwlock_define, gl_rwlock_wrlock, gl_rwlock_unlock)
	[_LIBC]: New macros.
	(_nl_state_lock, set_binding_values): Use gl_rwlock_* instead of
	__libc_rwlock_*.
	* dcigettext.c (gl_rwlock_define_initialized, gl_rwlock_rdlock,
	gl_rwlock_wrlock, gl_rwlock_unlock) [_LIBC]: New macros.
	(tree_lock, _nl_state_lock, DCIGETTEXT): Use gl_rwlock_* instead of
	__libc_rwlock_*.
	* finddomain.c (gl_rwlock_define_initialized, gl_rwlock_rdlock,
	gl_rwlock_wrlock, gl_rwlock_unlock) [_LIBC]: New macros.
	(_nl_find_domain): Use gl_rwlock_* instead of __libc_rwlock_*.
	* textdomain.c (gl_rwlock_define, gl_rwlock_wrlock, gl_rwlock_unlock)
	[_LIBC]: New macros.
	(_nl_state_lock, TEXTDOMAIN): Use gl_rwlock_* instead of
	__libc_rwlock_*.
	Needed because NetBSD 3.0 <pthread.h> does
	#define pthread_rwlock_rdlock __libc_rwlock_rdlock etc.

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* config.charset: Update for NetBSD 3.0.

2006-05-24  Bruno Haible  <bruno@clisp.org>

	* printf-args.c (printf_fetchargs): Turn NULL pointers for