@@ -1,3 +1,7 @@
+2006-07-20  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 2:0:2.
+
 2006-07-14  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (MOSTLYCLEANFILES): New variable.
