@@ -1,3 +1,7 @@
+2006-07-20  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 8:0:0.
+
 2006-07-13  Bruno Haible  <bruno@clisp.org>
 
 	* printf.c (libintl_printf): Define to __printf__ on NetBSD, Cygwin,
